metadata/force-app/main/default/objects/Adjacent_Technology__c/Adjacent_Technology__c.object-meta.xml
<CustomObject>
    <label>Adjacent Technology</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Technology Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjacent Technologies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>