metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adjacent Technologies</relationshipLabel>
    <relationshipName>Customer_Technologies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>