metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Adjacent_Technology_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Adjacent_Technology_18_Digit__c</fullName>
    <formula>casesafeid(Id)</formula>
    <label>Adjacent Technology (18 Digit)</label>
    <type>Text</type>
</CustomField>