metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Adjacent_Technology__c.field-meta.xml
<CustomField>
    <fullName>Adjacent_Technology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If technology is not listed, please select other and add name below.</inlineHelpText>
    <label>Adjacent Technology (Deprecated)</label>
    <referenceTo>Integration__c</referenceTo>
    <relationshipLabel>Adjacent Technologies (Dep)</relationshipLabel>
    <relationshipName>Adjacent_Technologies_Dep</relationshipName>
    <type>Lookup</type>
</CustomField>