metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Bynder_Development_Partner__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Development_Partner__c</fullName>
    <description>BO-1552 : Used to capture additional details of adjacent technology.</description>
    <label>Bynder Development Partner (Deprecated)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>