metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>BODEV-84: Replace old picklist Category field with a formula.</description>
    <formula>TEXT( Technology__r.Parent_Category__c )</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>