metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Confirmed_integration__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed integration</label>
    <type>Checkbox</type>
</CustomField>