metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Connector_Available__c.field-meta.xml
<CustomField>
    <fullName>Connector_Available__c</fullName>
    <description>Indicates whether a packaged connector available for this integration</description>
    <formula>IF( Technology__r.of_Integrations_available__c &gt; 0, true,false)</formula>
    <inlineHelpText>Indicates whether a packaged connector available for this integration</inlineHelpText>
    <label>Connector Available?</label>
    <type>Checkbox</type>
</CustomField>