metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Created_automatically__c.field-meta.xml
<CustomField>
    <fullName>Created_automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-421: Checked when the Adjacent Technology was created as a part of the trigger flow.</description>
    <label>Created automatically (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>