metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Customer_ARR__c.field-meta.xml
<CustomField>
    <fullName>Customer_ARR__c</fullName>
    <formula>Account__r.Current_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current ARR</inlineHelpText>
    <label>Customer ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>