metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Customer_integration_use_case__c.field-meta.xml
<CustomField>
    <fullName>Customer_integration_use_case__c</fullName>
    <label>Customer integration use case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>