metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Customer_s_partner_bulding_integration__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_partner_bulding_integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What partner build the new integration?</inlineHelpText>
    <label>Customer&apos;s partner bulding integration</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adjacent Technologies (Customer&apos;s partner bulding integration)</relationshipLabel>
    <relationshipName>Adjacent_Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>