metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Date_integration_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_integration_confirmed__c</fullName>
    <label>Date integration confirmed</label>
    <type>Date</type>
</CustomField>