metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Date_integration_last_detected__c.field-meta.xml
<CustomField>
    <fullName>Date_integration_last_detected__c</fullName>
    <inlineHelpText>The date when the integration was last detected.</inlineHelpText>
    <label>Date integration last detected</label>
    <type>Date</type>
</CustomField>