metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/DEL_Category__c.field-meta.xml
<CustomField>
    <fullName>DEL_Category__c</fullName>
    <label>[DEL] Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content Delivery Networks</fullName>
            </value>
            <value>
                <fullName>Content Management Solution</fullName>
            </value>
            <value>
                <fullName>Content Operations</fullName>
            </value>
            <value>
                <fullName>Customer Relationship Management</fullName>
            </value>
            <value>
                <fullName>Design / Collaboration / Mark-Up Tools</fullName>
            </value>
            <value>
                <fullName>Digital Rights Management</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Learning Management System</fullName>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>Product Information Management</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Sales enablement</fullName>
            </value>
            <value>
                <fullName>Social Media Management Tools</fullName>
            </value>
            <value>
                <fullName>Stock images / Stock Vendor</fullName>
            </value>
            <value>
                <fullName>Storage Tools</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>