metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/How_are_they_connected__c.field-meta.xml
<CustomField>
    <fullName>How_are_they_connected__c</fullName>
    <description>BO-1552 : Used to capture additional details of adjacent technology.</description>
    <inlineHelpText>How is the integration connected?</inlineHelpText>
    <label>How are they connected?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>Middleware</fullName>
            </value>
            <value>
                <fullName>SDK</fullName>
            </value>
            <value>
                <fullName>Plugin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>