metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/If_live_how_long_did_development_take__c.field-meta.xml
<CustomField>
    <fullName>If_live_how_long_did_development_take__c</fullName>
    <description>BO-1552 : Used to capture additional details of adjacent technology.</description>
    <label>If live, how long did development take?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>