metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/If_Other_enter_name_here__c.field-meta.xml
<CustomField>
    <fullName>If_Other_enter_name_here__c</fullName>
    <inlineHelpText>If the technology is not listed above, please select &apos;Other&apos; and include the name here.</inlineHelpText>
    <label>If &apos;Other&apos;, enter name here</label>
    <length>255</length>
    <type>Text</type>
</CustomField>