metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the integration</inlineHelpText>
    <label>Integration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Integration__c.Technology__c</field>
            <operation>equals</operation>
            <valueField>$Source.Technology__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Integration__c</referenceTo>
    <relationshipLabel>Adjacent Technologies (Integration)</relationshipLabel>
    <relationshipName>Adjacent_Technologies1</relationshipName>
    <type>Lookup</type>
</CustomField>