metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Integration_approach__c.field-meta.xml
<CustomField>
    <fullName>Integration_approach__c</fullName>
    <inlineHelpText>How did they manage this integration?</inlineHelpText>
    <label>Integration approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Built by customer in-house team</fullName>
            </value>
            <value>
                <fullName>Built by customer&apos;s partner</fullName>
            </value>
            <value>
                <fullName>Using offered integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>