metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Integration_data_flow_direction__c.field-meta.xml
<CustomField>
    <fullName>Integration_data_flow_direction__c</fullName>
    <label>Integration data flow direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push data into DAM</fullName>
            </value>
            <value>
                <fullName>Pull data from DAM</fullName>
            </value>
            <value>
                <fullName>Bi-directional sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>