metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Integration_developed_by__c.field-meta.xml
<CustomField>
    <fullName>Integration_developed_by__c</fullName>
    <formula>IF( CONTAINS( TEXT(Integration_approach__c) , &apos;Built by customer&apos;),
&apos;Customer&apos;,
IF(TEXT(Integration_approach__c) = &apos;Using offered integration&apos;,
IF( Integration__r.Integration_Provider__r.Name = &apos;Bynder BV&apos;,
&quot;Bynder&quot;,
&quot;Bynder&apos;s partner&quot;
),
&quot;&quot;
)
)</formula>
    <inlineHelpText>Who has developed the integration?</inlineHelpText>
    <label>Integration developed by</label>
    <type>Text</type>
</CustomField>