metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Integration_in_use__c.field-meta.xml
<CustomField>
    <fullName>Integration_in_use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Bynder has an out-of-the-box integration for this software.</description>
    <inlineHelpText>Indicates that Bynder has an out-of-the-box integration for this software.</inlineHelpText>
    <label>Integration in use (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>