metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Integration_requested_date__c.field-meta.xml
<CustomField>
    <fullName>Integration_requested_date__c</fullName>
    <inlineHelpText>Date integration was requested</inlineHelpText>
    <label>Integration requested date</label>
    <type>Date</type>
</CustomField>