metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Link_to_Architecture_Diagram__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Architecture_Diagram__c</fullName>
    <description>BO-1552 : Used to capture additional details of adjacent technology.</description>
    <label>Link to Architecture Diagram(Deprecated)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>