metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Opportunity related to integration</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Adjacent Technologies</relationshipLabel>
    <relationshipName>Adjacent_Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>