metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Opportunity_ARR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ARR__c</fullName>
    <formula>Opportunity__r.ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total ARR of the opportunity</inlineHelpText>
    <label>Opportunity ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>