metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Priority_of_the_integration__c.field-meta.xml
<CustomField>
    <fullName>Priority_of_the_integration__c</fullName>
    <label>Priority of the integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must have</fullName>
            </value>
            <value>
                <fullName>Should have</fullName>
            </value>
            <value>
                <fullName>Nice to have</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>