metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Reason_for_integration__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_integration__c</fullName>
    <description>BO-1552 : Used to capture additional details of adjacent technology.</description>
    <label>Reason for integration (Deprecated)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>