metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Adjacent Technology</label>
    <referenceTo>Technology__c</referenceTo>
    <relationshipLabel>Adjacent Technologies</relationshipLabel>
    <relationshipName>Adjacent_Technologies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>