metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Use_case__c.field-meta.xml
<CustomField>
    <fullName>Use_case__c</fullName>
    <label>Use case (Deprecated)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>