metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/What_benefits_have_they_seen__c.field-meta.xml
<CustomField>
    <fullName>What_benefits_have_they_seen__c</fullName>
    <description>BO-1552 : Used to capture additional details of adjacent technology.</description>
    <label>What benefits have they seen?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>