metadata/force-app/main/default/objects/Adjacent_Technology__c/fields/Who_developed_it__c.field-meta.xml
<CustomField>
    <fullName>Who_developed_it__c</fullName>
    <description>BO-1552 : Used to capture additional details of adjacent technology.</description>
    <label>Who developed it? (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Dev Team</fullName>
            </value>
            <value>
                <fullName>Non Bynder Partner Dev Team</fullName>
            </value>
            <value>
                <fullName>Bynder Partner Dev Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>