metadata/force-app/main/default/objects/Adjacent_Technology__c/validationRules/Dev_info_required_Integration_in_use.validationRule-meta.xml
<ValidationRule>
    <fullName>Dev_info_required_Integration_in_use</fullName>
    <active>false</active>
    <description>If live, how long did development take? is required when Integration in use is checked.</description>
    <errorConditionFormula>Integration_in_use__c &amp;&amp; ISBLANK(If_live_how_long_did_development_take__c)</errorConditionFormula>
    <errorMessage>Please fill &apos;If live, how long did development take?&apos; when &apos;Integration in use&apos; is checked or Bynder has an out-of-the-box integration for this software.</errorMessage>
</ValidationRule>