metadata/force-app/main/default/objects/Adjacent_Technology__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DEL_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>